feat(): add ng-cloak and ng-hide selector to improve the loading process Fix #21
feat(): remove ng-hide controller

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="bower_components/angular-material/angular-material.min.css">
   <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
-<body class="layout-row">
+<body class="layout-row" ng-cloak>
 
   <md-sidenav layout="column" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left" class="md-sidenav-left" tabindex="-1">
 
