--- a/src/index.html
+++ b/src/index.html
@@ -10,46 +10,60 @@
   <link rel="stylesheet" type="text/css" href="bower_components/angular-material/angular-material.min.css">
   <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
-<body class="layout-row" ng-cloak>
-
-  <md-sidenav layout="column" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left" class="md-sidenav-left" tabindex="-1">
-
-  <div class="brand">
-    <a ng-href="#/">
-      <img src="img/werdenfelsgymnasium.jpg">
-    </a>
-  </div>
-
-  <div ng-repeat="(key, value) in guides">
-    <md-menu-item ng-href="#/guide/{{ key }}" ng-label="{{ value.title }}" />
-  </div>
-
-</md-sidenav>
-
-<div tabindex="-1" layout="column" layout-fill role="main">
+<body layout="column" ng-cloak>
 
   <md-toolbar class="md-whiteframe-z2">
-  <div class="md-toolbar-tools">
-    <md-button ng-click="toggleSidenav()" class="md-icon-button hide-gt-sm" aria-label="Sidenav" nofocus>
-    <md-icon md-svg-icon="img/menu.svg"></md-icon>
-  </md-button>
-  <div class="fill-height layout-row flex" style="white-space: nowrap">
-    <a ng-href="#/">
-      <h2>
-        <span>Werdenfels-Gymnasum Hilfe</span>
-      </h2>
-    </a>
+    <div class="md-toolbar-tools">
+       <md-button ng-click="toggleSidenav()" class="md-icon-button hide-gt-sm" aria-label="Sidenav" nofocus>
+        <md-icon md-svg-icon="img/menu.svg"></md-icon>
+       </md-button>
+      <div class="fill-height layout-row flex" style="white-space: nowrap">
+        <a ng-href="#/">
+           <h2>
+            <span>Werdenfels-Gymnasum Hilfe</span>
+          </h2>
+        </a>
+      </div>
+    </div>
+  </md-toolbar>
+
+  <div layout="row" flex>
+
+    <md-sidenav md-whiteframe="4" layout="column" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left" class="md-sidenav-left"
+                tabindex="-1">
+
+      <div class="brand">
+        <a ng-href="#/">
+          <img src="img/werdenfelsgymnasium.jpg">
+        </a>
+      </div>
+
+      <div ng-repeat="(key, value) in guides">
+        <!-- When using a collapse menu item -->
+        <div ng-if="value.collapse">
+          <md-collapse-menu-item ng-label="{{ value.title }}">
+            <div ng-repeat="(childkey, child) in value.items">
+              <md-menu-item ng-href="#/guide/{{ childkey }}" ng-label="{{ child.title }}" />
+            </div>
+          </md-collapse-menu-item>
+        </div>
+        <!-- When using no collapse menu item -->
+        <div ng-if="!value.collapse">
+            <md-menu-item ng-href="#/guide/{{ key }}" ng-label="{{ value.title }}" />
+        </div>
+      </div>
+
+    </md-sidenav>
+
+    <md-content class="layout-padding ng-scope flex" class="md-whiteframe-1dp">
+
+      <div ng-view></div>
+
+    </md-content>
+
   </div>
-</div>
-</md-toolbar>
 
-<md-content md-scroll-y class="layout-padding ng-scope flex" class="md-whiteframe-1dp">
 
-  <div ng-view></div>
-
-</md-content>
-
-</div>
 </body>
 
 <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
