--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <div ng-if="value.collapse">
           <md-collapse-menu-item ng-label="{{ value.title }}">
             <div ng-repeat="(childkey, child) in value.items">
-              <md-menu-item ng-href="#/guide/{{ childkey }}" ng-label="{{ child.title }}" />
+              <md-menu-item class="collapsed-menu-item" ng-href="#/guide/{{ childkey }}" ng-label="{{ child.title }}" />
             </div>
           </md-collapse-menu-item>
         </div>
