--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
 
   <div layout="row" flex>
 
-    <md-sidenav md-whiteframe="4" layout="column" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left" class="md-sidenav-left"
-                tabindex="-1">
+    <md-sidenav md-whiteframe="4" layout="column" md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left"
+                class="md-sidenav-left" tabindex="-1">
 
       <div class="brand">
         <a ng-href="#/">
@@ -43,19 +43,19 @@
         <div ng-if="value.collapse">
           <md-collapse-menu-item ng-label="{{ value.title }}">
             <div ng-repeat="(childkey, child) in value.items">
-              <md-menu-item ng-href="#/guide/{{ childkey }}" ng-label="{{ child.title }}" />
+              <md-menu-item ng-href="#/guide/{{ childkey }}" ng-label="{{ child.title }}"></md-menu-item>
             </div>
           </md-collapse-menu-item>
         </div>
         <!-- When using no collapse menu item -->
         <div ng-if="!value.collapse">
-            <md-menu-item ng-href="#/guide/{{ key }}" ng-label="{{ value.title }}" />
+            <md-menu-item ng-href="#/guide/{{ key }}" ng-label="{{ value.title }}"></md-menu-item>
         </div>
       </div>
 
     </md-sidenav>
 
-    <md-content class="layout-padding ng-scope flex" class="md-whiteframe-1dp">
+    <md-content layout-padding flex class="md-whiteframe-1dp">
 
       <div ng-view></div>
 
