--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Werdenfels-Gymnasium</title>
 
-
+  <meta charset="UTF-8">
   <meta name="author" content="Paul Gschwendtner">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
