--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <md-icon md-svg-icon="img/menu.svg"></md-icon>
        </md-button>
       <div class="fill-height layout-row flex" style="white-space: nowrap">
-        <a ng-href="#/">
+        <a ng-href="#!/">
            <h2>
             <span>Werdenfels-Gymnasium Hilfe</span>
           </h2>
@@ -43,14 +43,14 @@
         <div ng-if="value.collapse">
           <md-collapse-menu-item ng-label="{{ value.title }}">
             <div ng-repeat="(childkey, child) in value.items">
-              <md-menu-item ng-href="#/guide/{{ childkey }}">{{ child.title }}</md-menu-item>
+              <md-menu-item ng-href="#!/guide/{{ childkey }}">{{ child.title }}</md-menu-item>
             </div>
           </md-collapse-menu-item>
         </div>
 
         <!-- When using no collapse menu item -->
         <div ng-if="!value.collapse">
-          <md-menu-item ng-href="#/guide/{{ key }}">{{ value.title }}</md-menu-item>
+          <md-menu-item ng-href="#!/guide/{{ key }}">{{ value.title }}</md-menu-item>
         </div>
       </div>
 
