--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Werdenfels-Gymnasium</title>
 
+  <!-- Base Href for Github Pages -->
+  <base href="/help/">
+
   <meta charset="UTF-8">
   <meta name="author" content="Paul Gschwendtner">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
