--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <title>Werdenfels-Gymnasium</title>
 
   <!-- Base Href for Github Pages -->
-  <base href="/">
+  <base href="/help/">
 
   <meta charset="UTF-8">
   <meta name="author" content="Paul Gschwendtner">
