--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <title>Werdenfels-Gymnasium</title>
 
   <!-- Base Href for Github Pages -->
-  <base href="/help/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta name="author" content="Paul Gschwendtner">
@@ -75,13 +75,13 @@
 
 </body>
 
-<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-animate/angular-animate.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-aria/angular-aria.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
-<script type="text/javascript" src="bower_components/marked/marked.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-marked/dist/angular-marked.min.js"></script>
-<script type="text/javascript" src="bower_components/angular-material/angular-material.min.js"></script>
+<script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
+<script type="text/javascript" src="node_modules/angular-animate/angular-animate.min.js"></script>
+<script type="text/javascript" src="node_modules/angular-aria/angular-aria.min.js"></script>
+<script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
+<script type="text/javascript" src="node_modules/marked/marked.min.js"></script>
+<script type="text/javascript" src="node_modules/angular-marked/dist/angular-marked.js"></script>
+<script type="text/javascript" src="node_modules/angular-material/angular-material.min.js"></script>
 
 <script type="text/javascript" src="js/app.js"></script>
 
